--- a/index.html
+++ b/index.html
@@ -1370,8 +1370,8 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}
                                 <!-- Title -->
                                 <div class="block__main">
                                     <h1>
-                                        <a translate="NAV_InteractContract" ng-click="setVisibility( 'interactView')"> Interact with Contract </a> or
-                                        <a translate="NAV_DeployContract" ng-click="setVisibility('deployView')"> Deploy Contract </a>
+                                        <a translate="NAV_InteractContract" ng-click="setVisibility( 'interactView')"> Interact with Contract </a>
+                                        <!-- <a translate="NAV_DeployContract" ng-click="setVisibility('deployView')"> Deploy Contract </a> -->
                                     </h1>
                                 </div>
                                 <!-- / Title -->
@@ -1392,7 +1392,7 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}
                                     <section class="col-sm-6 clearfix">
                                         <label translate="CONTRACT_Title_2"> Select Existing Contract </label>
                                         <div class="dropdown">
-                                            <a class="btn btn-default dropdown-toggle" class="dropdown-toggle" ng-click="dropdownExistingContracts=!dropdownExistingContracts">
+                                            <a class="btn btn-default dropdown-toggle" ng-click="dropdownExistingContracts=!dropdownExistingContracts">
                     {{selectedAbi.name}} <small class="mono">{{selectedAbi.address}}</small><i class="caret"></i>
     </a>
                                             <ul class="dropdown-menu" ng-show="dropdownExistingContracts">
@@ -1433,15 +1433,14 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}
       <p> You probably want to change the address to your Mist Multisig Address....</p>
     </div>
     <div class="form-group well" ng-show="contract.address=='0xd0a6E6C54DbC68Db5db3A091B171A77407Ff7ccf'">
-      <ol>
-        <li><strong>Generate EOS Key-pair</strong></li>
-        <li><strong>Register / Map your EOS Key</strong>
-          <ul>
-            <li>Select <code>register</code></li>
-            <li> Enter your <strong><u>EOS Public Key</u></strong> <--- CAREFUL! EOS PUBLIC KEY!</li>
-            <li>Unlock wallet</li>
-            <li><span translate="SEND_amount">Amount to Send</span>: <code>0</code> &middot;
-                                        <span translate="TRANS_gas">Gas Limit</span>: at least <code>90000</code></li>
+        <ol>
+            <li><strong>Generate EOS Key-pair</strong></li>
+            <li><strong>Register / Map your EOS Key</strong>
+                <ul>
+                    <li>Select <code>register</code></li>
+                    <li> Enter your <strong><u>EOS Public Key</u></strong> <--- CAREFUL! EOS PUBLIC KEY!</li>
+                    <li>Unlock wallet</li>
+                    <li><span translate="SEND_amount">Amount to Send</span>: <code>0</code> &middot;<span translate="TRANS_gas">Gas Limit</span>: at least <code>90000</code></li>
                                         </ul>
                                         </li>
                                         <li><strong>Fund EOS Contract on Send Page</strong>
@@ -1459,12 +1458,12 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}
                                                 <li><span translate="SEND_amount">Amount to Send</span>: <code>0</code> &middot; <span translate="TRANS_gas">Gas Limit</span>: at least <code>90000</code></li>
                                             </ul>
                                         </li>
+                                        </ol>
                         </div>
 
-                        <div class="btn-group">
-                            <a class="btn btn-default" ng-click="dropdownContracts=! dropdownContracts">
-      {{contract.selectedFunc==null ?"Select a function" : contract.selectedFunc.name}}<i class="caret"></i></a>
-                            <ul class="dropdown-menu" ng-show="dropdownContracts">
+                        <div class="btn-group dropdown">
+                            <a class="btn btn-default selectFunction" ng-click="dropdownContracts = !dropdownContracts"> {{contract.selectedFunc==null ? "Select a function" : contract.selectedFunc.name}}<i class="caret"></i></a>
+                            <ul class="dropdown-menu">
                                 <li ng-repeat="func in contract.functions track by $index"><a ng-click="selectFunc($index)">{{func.name}}</a></li>
                             </ul>
                         </div>
@@ -3061,11 +3060,12 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}
         <!-- </div> -->
 
 
+        <!-- <div data-ng-repeat="alert in notifier.alerts"> -->
         <div data-ng-repeat="alert in notifier.alerts">
             <!-- <div class="alert popup alert-{{alert.type}} animated-show-hide" style="bottom: {{55*$index}}px; z-index: {{999+$index}};"> -->
             <div class="alert popup alert-{{alert.type}} animated-show-hide">
                 <div class="container">
-                    <div class='alert-message' ng-bind-html="alert.message"></div>
+                    <div class="alert-message" ng-bind-html="alert.message"></div>
                 </div>
                 <i class="icon-close" ng-click="alert.close()"></i>
             </div>
